--- a/BFC.html
+++ b/BFC.html
@@ -11,8 +11,8 @@
 <body>
   <div class="f">
     <div class="s"></div>
-    <!-- <div class="s"></div>
-    <div class="s"></div> -->
+    <div class="s"></div>
+    <div class="s"></div>
   </div>
   <script>
 
