--- a/微任务.html
+++ b/微任务.html
@@ -10,26 +10,43 @@
 
 <body>
   <script>
-    //     promise async await的异步操作的时候会加入到微任务中去 会在调用栈清空的时候立即执行
-    // 调用栈中加入的微任务会立马执行
-    let p = new Promise(resolve => {
-      console.log(4);
-      resolve(5)
-    })
-    function f1 () {
-      console.log(1);
+    let animal = {
+      name: 'name',
+      type: 'type',
+      gender: 'gender'
     }
-    function f2 () {
-      setTimeout(() => {
-        console.log(2);
-      }, 0);
-      f1()
-      console.log(3);
-      p.then(resolve => {
-        console.log(resolve);
-      })
+    function printAnimalsDetails (animal) {
+      let result = null
+      if (animal) {
+        if (animal.type) {
+          if (animal.name) {
+            if (animal.gender) {
+              result = `${animal.name} is a ${animal.gender}- ${animal.type}`
+            } else {
+              result = 'no animal gender'
+            }
+          } else {
+            result = 'no animal name'
+          }
+        } else {
+          result = 'no animal type'
+        }
+      } else {
+        result = 'no animal'
+      }
+      return result
     }
-    f2()
+    console.log(printAnimalsDetails(animal)
+    );
+    function printAnimalsDetails2 ({ type, name, gender } = {}) {
+      if (!type) return 'no animal type'
+      if (!name) return 'no animal name'
+      if (!gender) return 'no animal gender'
+      else
+        return `${animal.name} is a ${animal.gender}- ${animal.type}`
+    }
+    console.log(printAnimalsDetails2(animal));
+
   </script>
 </body>
 
